--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -11,7 +11,8 @@
     "allowImportingTsExtensions": true,
     "isolatedModules": true,
     "moduleDetection": "force",
-    "noEmit": true,
+    // "noEmit": true,
+    "composite": true,
 
     /* Linting */
     "strict": true,
